CloudFormation/wordpress-alb.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  WordPressCustomDomainName:
    Type: String
    Description: '(Optional) Custom Domain Name for WordPress.'
    Default: ''
  
  HostedZoneId:
    Type: String
    Description: '(Optional) Hosted zone id for WordPress custom domain. Required if WordPressCustomDomainName is not empty.'
    Default: ''

  RedirectHttpToHttps:
    Type: String
    Description: 'Redirect HTTP traffic to HTTPS. Default: false'
    Default: false
    AllowedValues: [true, false]

Conditions:
  HasCustomDomainName: !Not [!Equals [!Ref WordPressCustomDomainName, '']]

  UseHttps: !Equals [!Ref RedirectHttpToHttps, true]

Resources:
  # ALB
  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: For WordPress ALB
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: All
          IpProtocol: -1
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0 
          Description: HTTPS connection from anywhere
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 0.0.0.0/0  
          Description: HTTP connection from anywhere
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId: !ImportValue VpcId

  Alb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !Ref AlbSecurityGroup
      SubnetMappings:
        - SubnetId: !ImportValue PublicSubnetAId
        - SubnetId: !ImportValue PublicSubnetBId
      Type: application

  AlbTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPort: 8443
      HealthCheckProtocol: HTTPS
      Port: 8443
      Protocol: HTTPS
      TargetType: ip
      VpcId: !ImportValue VpcId

  AlbHttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: !If
        - UseHttps
        - - RedirectConfig:
              Host: '#{host}'
              Path: '/#{path}'
              Port: 443
              Protocol: HTTPS
              Query: '#{query}'
              StatusCode: HTTP_301
            Type: redirect
        - - ForwardConfig:
              TargetGroups:
                - TargetGroupArn: !Ref AlbTargetGroup
            Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 80
      Protocol: HTTP

  AlbCertificate:
    Type: AWS::CertificateManager::Certificate
    Condition: HasCustomDomainName
    Properties:
      DomainName: !Ref WordPressCustomDomainName
      DomainValidationOptions:
        - DomainName: !Ref WordPressCustomDomainName
          HostedZoneId: !Ref HostedZoneId
      ValidationMethod: DNS

  AlbHttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: HasCustomDomainName
    Properties:
      Certificates: 
        - CertificateArn: !Ref AlbCertificate
      DefaultActions:
        - FixedResponseConfig:
            ContentType: text/html
            MessageBody: Not Found
            StatusCode: 404
          Type: fixed-response
      LoadBalancerArn: !Ref Alb
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06

  AlbHttpsListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Condition: HasCustomDomainName
    Properties:
      Actions:
        - ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref AlbTargetGroup
          Type: forward
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values:
              - !Ref WordPressCustomDomainName
      ListenerArn: !Ref AlbHttpsListener
      Priority: 1

  WordPressRecordSet:
    Type: AWS::Route53::RecordSet
    Condition: HasCustomDomainName
    Properties:
      AliasTarget:
        DNSName: !GetAtt Alb.DNSName
        HostedZoneId: !GetAtt Alb.CanonicalHostedZoneID
      HostedZoneId: !Ref HostedZoneId
      Name: !Ref WordPressCustomDomainName
      Type: A

Outputs:
  AlbDnsNameOutput:
    Value: !GetAtt Alb.DNSName
    Export:
      Name: AlbDnsName

  AlbTargetGroupArnOutput:
    Value: !Ref AlbTargetGroup
    Export:
      Name: AlbTargetGroupArn

  AlbSecurityGroupIdOutput:
    Value: !Ref AlbSecurityGroup
    Export:
      Name: AlbSecurityGroupId
